--- a/static/index.html
+++ b/static/index.html
@@ -6,6 +6,10 @@
 	<title>Herro React!</title>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.3/react.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.3/react-dom.js"></script>
+	<style type="text/css" media="screen">
+		th, td { border: 1px solid #999; padding: 2px; }
+		table { border-collapse: collapse; }
+	</style>
 </head>
 <body>
 	<div id="main"></div>
